--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="settings">Settings</string>
     <string name="completed_profile">completed profile</string>
     <string name="exit_profile">exit profile</string>
+    <string name="product_description">Product Description</string>
 </resources>
